@@ -78,6 +78,6 @@
       "Mohammad S Anwar <mohammad.anwar@yahoo.com>",
       "Peter Pentchev <roam@ringlet.net>"
    ],
-   "x_serialization_backend" : "JSON::PP version 2.97001",
+   "x_serialization_backend" : "JSON::PP version 4.02",
    "x_static_install" : 1
 }
